# ProjectsStorage

./: .gitignore  README.md
audio-codecs/: audio-codecs.cmake  tlv320aic3204-driver.cmake  tlv320aic3204-driver.cpp  tlv320aic3204-driver.h  tlv320aic3204-input-configs.cpp  tlv320aic3204-input-configs.h  tlv320aic3204-interface.h  tlv320aic3204-output-configs.cpp  tlv320aic3204-output-configs.h
clock-generator/: si5351-driver.cmake  si5351-interface.h  si5351.cpp  si5351.h
command/: Action.h  Action.hpp  AsyncCallMessage.h  AsyncCallMessage.hpp  AsyncCallQueue.h  AsyncCallQueue.hpp  AsyncCommand.h  AsyncCommand.hpp  AsyncCommandDispatcher.h  AsyncCommandDispatcher.hpp  Command.h  Command.hpp  CommandDispatcher.hpp  ICommandQueue.hpp  Observer.h  Observer.hpp  command.cmake
common/: IValue.h  IValueProvider.h  Value.h  ValueCollection.h  ValueProvider.h  ValueTable.h  common.cmake
dsp-common/: biquad-f32.h  complex-biquad-f32.c  complex-biquad-f32.h  dsp-common.cmake
esp32-common/: esp32-common.cmake  i2c-functions.c  i2c-functions.h  sh1106-interface.c  si5351-interface.c  ssd1306-interface.c  ssd1306-interfaces.c  st7789-interface.c  tlv320aic3204-interface.c  types.h
esp32-gui-project/: .gitignore  CMakeLists.txt  esp32-gui-project.code-workspace  sdkconfig  sdkconfig.old  workspace.code-workspace
esp32-project/: CMakeLists.txt  heaptrace-gdbinit  sdkconfig  sdkconfig.old
esp32-project/main/: CMakeLists.txt  attributes.h  audio-codec-thread.cpp  audio-data-flow-thread.cpp  configuration.h  esp32-project.code-workspace  gui-thread.cpp  i2c-devices-thread.cpp  instances.cpp  main.c  sdr_320x240_Data.c
freeRTOS/: AnimatedTimer.cpp  AnimatedTimer.hpp  CommandQueue.hpp  CommandQueueBlocked.hpp  free-rtos.cmake
gui-128x64/: gui-128x64-thread.c  gui-128x64.cmake
gui-lib/: gui-lib.cmake  gui_resource_types.h
gui-orange-gray/: gui-orange-gray.cmake
gui-resources/: font_bw_size10.h  font_bw_size12.c  font_bw_size12.h  font_bw_size14_Data.c  font_bw_size14_bold_Data.c  font_bw_size16.c  font_bw_size16_bold_Data.c  font_bw_size24.c  font_bw_size8.c  font_bw_size8.h  font_bw_size8_Data.c  gui-resources.cmake
gui-template/: gui-template.cmake
lcd-drivers/: lcd-driver.cmake  lcd-driver.h  sh1106-driver.cmake  sh1106-interface.h  sh1106.c  (+12 more)
(+555 files in other folders)
